--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "^9.38.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
+    "sass": "^1.93.2",
+    "sass-embedded": "^1.93.2",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
     "vitest": "^3.2.4",
