--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "format": "prettier --write \"src/**/*.{vue,ts,js,scss,css}\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "vue": "^3.5.22"
   },
   "devDependencies": {
