--- a/package.json
+++ b/package.json
@@ -15,27 +15,29 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/vue-fontawesome": "^3.1.2",
-    "vue": "^3.5.22"
+    "@fortawesome/vue-fontawesome": "^3.1.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/vue": "^8.1.0",
+    "@types/jest": "^30.0.0",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
+    "@vue/compiler-sfc": "^3.5.22",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.38.0",
-    "jsdom": "^26.1.0",
+    "jsdom": "^24.1.0",
     "prettier": "^3.6.2",
     "sass": "^1.93.2",
     "sass-embedded": "^1.93.2",
     "typescript": "~5.9.3",
-    "vite": "^7.1.7",
+    "vite": "^6.0.11",
     "vitest": "^3.2.4",
+    "vue": "^3.5.22",
     "vue-tsc": "^3.1.0"
   }
 }
